added skeletal html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,37 @@
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    
+    <nav>
+        <img class="logo" src="https://dada-da4d5.web.app/static/media/DadaLogoNavy.8257a177.svg" alt="dada logo"/>
+        <button class="login">Login</button>
+    </nav>
+    <header>
+        <h1 class="heading">A parenting coach in your pocket</h1>
+    </header>
+    <main>
+        <section class="intro">
+            <img class="device" src="./images/device.svg" alt="image of mobile phone app">
+            <h1>Most parenting resources are built with moms in mind.</h1>
+            <h2>We've created one for you, Dad!</h2>
+            <h3>We want to empower fathers to parent with confidence and enjoy more quality time with their kids.</h3>
+            <button class="dadvice">Get Dadvice</button>
+        </section>
+        <section class="info">
+            <img class="penguin1" src="./images/penguin1.svg" alt="penguin with lightbulb">
+            <h3><b>Low-effort activity ideas</b> to suit your mood and budget</h3>
+            <img src="./images/penguin2.svg" alt="penguin pointing">
+            <h3><b>Fast and clear answers</b> to most common parenting challenges</h3>
+            <img src="./images/penguin3.svg" alt="penguin reading a book">
+            <h3><b>Cliff-notes</b> from top-rates parenting books <i>(because who has the time to read the whole thing?)</i></h3>
+            <img src="./images/penguin4.svg" alt="penguin lifting weight">
+            <h3><b>Longer reads</b> for the SuperDads out there</h3>
+            <button class="sig up">Sign Up</button>
+        </section>
+    </main>
+    <footer>
+        <a>Contact Us</a>
+        <a>Privacy</a>
+        <a>Terms</a>
+    </footer>
 </body>
 </html>
