added font and colour variables

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         </section>
         <section class="info">
             <img class="penguin1" src="./images/penguin1.svg" alt="penguin with lightbulb">
-            <h3><b>Low-effort activity ideas</b> to suit your mood and budget</h3>
+            <h3><b class="bold">Low-effort activity ideas</b> to suit your mood and budget</h3>
             <img src="./images/penguin2.svg" alt="penguin pointing">
-            <h3><b>Fast and clear answers</b> to most common parenting challenges</h3>
+            <h3><b class="bold">Fast and clear answers</b> to most common parenting challenges</h3>
             <img src="./images/penguin3.svg" alt="penguin reading a book">
-            <h3><b>Cliff-notes</b> from top-rates parenting books <i>(because who has the time to read the whole thing?)</i></h3>
+            <h3><b class="bold">Cliff-notes</b> from top-rates parenting books <i>(because who has the time to read the whole thing?)</i></h3>
             <img src="./images/penguin4.svg" alt="penguin lifting weight">
-            <h3><b>Longer reads</b> for the SuperDads out there</h3>
+            <h3><b class="bold">Longer reads</b> for the SuperDads out there</h3>
             <button class="sig up">Sign Up</button>
         </section>
     </main>
