navigation bar editing attempt

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    <nav>
+    <nav class="navigation">
         <img class="logo" src="https://dada-da4d5.web.app/static/media/DadaLogoNavy.8257a177.svg" alt="dada logo"/>
         <button class="login">Login</button>
     </nav>
